--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
+    "@angular/fire": "^17.1.0",
     "@angular/forms": "^17.3.0",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
@@ -29,8 +30,8 @@
     "@taiga-ui/kit": "^4.7.0",
     "@taiga-ui/layout": "^4.7.0",
     "@taiga-ui/legacy": "^4.7.0",
-    "appwrite": "^14.0.1",
     "express": "^4.18.2",
+    "firebase": "^10.13.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
