--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@taiga-ui/legacy": "^4.7.0",
     "express": "^4.18.2",
     "firebase": "^10.13.2",
+    "ngx-sonner": "^1.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
