Add ngx-translate with es/en translations

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-server": "^17.3.12",
     "@angular/router": "^17.3.12",
     "@angular/ssr": "^17.3.11",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@taiga-ui/cdk": "^4.19.0",
     "@taiga-ui/core": "^4.19.0",
     "@taiga-ui/event-plugins": "^4.3.1",
